2008-02-19  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - test for <rdar://problem/5637569> CrashTracer: [REGRESSION] 620 crashes in Safari at com.apple.WebCore: WebCore::RenderBox::setStaticY + 15

        * fast/text/wbr-styled.html: Added.
        * platform/mac-leopard/fast/text/wbr-styled-expected.checksum: Added.
        * platform/mac-leopard/fast/text/wbr-styled-expected.png: Added.
        * platform/mac/fast/css-generated-content/wbr-with-before-content-expected.txt:
        * platform/mac/fast/text/wbr-pre-expected.txt:
        * platform/mac/fast/text/wbr-styled-expected.txt: Added.

2008-02-18  Dan Bernstein  <mitz@apple.com>

        Reviewed by Adam Roben in California.

        - remove unnecessary and erroneous layoutTestController calls from a test

        * fast/css/font-face-multiple-remote-sources.html:
        * platform/mac/fast/css/font-face-multiple-remote-sources-expected.txt:

2008-02-18  Brady Eidson  <beidson@apple.com>

        Reviewed by Darin

        Fix for <rdar://5747529> - ObjC Exception can cause JSLock to never be released

        * platform/mac-tiger/Skipped: Removed 2 hanging tests that now don't hang
        * platform/mac/plugins/webScriptObject-exception-deadlock-expected.txt: Added.
        * platform/mac/plugins/webScriptObject-exception-deadlock.html: Added.

2008-02-18  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        - generate new results for the one test that was altered by the
          double -> float -> double trip taken by numeric values in the
          CSS parser

        This test appears under three different names in three different
        parts of our test suite.

        * platform/mac/css1/box_properties/acid_test-expected.checksum: Updated.
        * platform/mac/css1/box_properties/acid_test-expected.png: Ditto.
        * platform/mac/css1/box_properties/acid_test-expected.txt: Ditto.