@@ -1,0 +1,17 @@
+<html>
+    <head>
+        <style>
+            input {
+                background-color: transparent;
+            }
+
+            input:first-letter {
+                color: white;
+            }
+        </style>
+    </head>
+<body>
+    This test passes if it doesn't crash and if the Submit button does not honor the first-letter style.<br>
+    <input type="submit"/>
+</body>
+</html>
