@@ -1,3 +1,15 @@
+2008-02-19  Beth Dakin  <bdakin@apple.com>
+
+        Reviewed by Sam.
+
+        Test for <rdar://problem/5729674> Seed: Crash in 
+        RenderButton::setStyle at http://www.dinorpg.com
+
+        * fast/forms/input-first-letter.html: Added.
+        * platform/mac/fast/forms/input-first-letter-expected.checksum: Added.
+        * platform/mac/fast/forms/input-first-letter-expected.png: Added.
+        * platform/mac/fast/forms/input-first-letter-expected.txt: Added.
+
 2008-02-19  Dan Bernstein  <mitz@apple.com>
 
         Reviewed by Darin Adler.
